@@ -12,38 +12,55 @@ function populateRecipePanel(obj)
     % later for loop to build the text and edit boxes associated with the 
     % recipe.
 
-    obj.recipePropertyNames  = {'sample||objectiveName', 'sample||ID', ...
-                'mosaic||scanmode', 'mosaic||numSections', ...
-                'mosaic||numOpticalPlanes', 'mosaic||sectionStartNum', ...
-                'mosaic||overlapProportion', 'mosaic||sampleSize', ...
-                'mosaic||cuttingSpeed','mosaic||cutSize', 'mosaic||sliceThickness', ...
+
+    obj.recipePropertyNames  = { ...
+        'mosaic||scanmode', ...
+        'sample||ID', ...
+        'mosaic||sampleSize', ...
+        'mosaic||sliceThickness', ...
+        'mosaic||numOpticalPlanes', ...
+        'mosaic||numSections', ...
+        'mosaic||cuttingSpeed', ...
+        'mosaic||cutSize', ...
+        'sample||objectiveName', ...
+        'mosaic||sectionStartNum', ...
+        'mosaic||overlapProportion', ...
                 };
 
-    obj.recipeFieldLabels = {'Objective Name', 'Sample ID', ...
-                'Scan Mode', 'Num. Sections', ...
-                'Num. Optical Planes', 'Section Start Num.', ...
-                'Overlap Prop.', 'Sample Size (mm)', ...
-                'Cut Speed (mm/s)', 'Cut Size (mm)', 'Slice Thickness (mm)', ...
+    obj.recipeFieldLabels = { ...
+        'Scan Mode', ...
+        'Sample ID', ...
+        'Sample Size (mm)', ...
+        'Slice Thickness (mm)', ...
+        'Num. Optical Planes', ...
+        'Num. Sections', ...
+        'Cut Speed (mm/s)', ...
+        'Cut Size (mm)', ...
+        'Objective Name', ...
+        'Section Start Num.', ...
+        'XY Overlap Prop.', ...
+
                 };
 
-    obj.recipeToolTips = {'The name of the objective.\nCurrently only used as a note.', ...
-                sprintf('String defining the sample ID.\nSpaces will be replaced with underscores.\nNames with leading digits will have a string appended.'), ...
-                'Scan mode (currently can only be set to "tile"', ...
-                'Number of sections to cut and image.', ...
-                'The numeric ID of the first section', ...
-                'The number of optical planes within a section', ...
-                'Proportion of overlap between adjacent tiles', ...
-                'Size of the sample in mm', ...
-                'Cutting speed in mm/s', ...
-                'How far to cut from the cutting start point', ...
-                'Thickness of each slice in mm', ...
-                };
+    obj.recipeToolTips = {...
+        'Scan mode (manual or auto-ROI)', ...
+        sprintf('String defining the sample ID.\nSpaces will be replaced with underscores.\nNames with leading digits will have a string appended.'), ...
+        'Size of the sample in mm', ...
+        'Thickness of each slice in mm', ...
+        'The number of optical planes within a section', ...
+        'Number of sections to cut and image.', ...
+        'Cutting speed in mm/s', ...
+        'How far to cut from the cutting start point', ...
+        'The name of the objective.\nCurrently only used as a note.', ...
+        'The numeric ID of the first section', ...
+        'Proportion of overlap between adjacent tiles', ...
+        };
 
 
-    % Flip to order nicely (sample at the top)
-    obj.recipeFieldLabels=fliplr(obj.recipeFieldLabels); 
-    obj.recipePropertyNames=fliplr(obj.recipePropertyNames);
-    obj.recipeToolTips=fliplr(obj.recipeToolTips);
+    % Flip because the following loop populates from the bottom up
+    %obj.recipeFieldLabels=fliplr(obj.recipeFieldLabels); 
+    %obj.recipePropertyNames=fliplr(obj.recipePropertyNames);
+    %obj.recipeToolTips=fliplr(obj.recipeToolTips);
 
 
 
@@ -54,41 +71,44 @@ function populateRecipePanel(obj)
                 'Callback',@obj.updateRecipePropertyInRecipeClass};
 
     % Build the recipe edit boxes using the properties: recipeFieldLabels and recipePropertyNames.
+    iH=0; %item height
+
     for ii=length(obj.recipePropertyNames):-1:1 %So the tab focus moves down the window not up it
 
         thisProp = strsplit(obj.recipePropertyNames{ii},'||');
 
         %Add a text label
-        obj.recipeTextLabels.(thisProp{1}).(thisProp{2}) = obj.makeRecipeLabel([0,18*(ii-1)+5,140,18], obj.recipeFieldLabels{ii});
+        obj.recipeTextLabels.(thisProp{1}).(thisProp{2}) = obj.makeRecipeLabel([0,iH+5,140,18], obj.recipeFieldLabels{ii});
         obj.recipeTextLabels.(thisProp{1}).(thisProp{2}).VerticalAlignment='middle';
         %Add a text entry box
 
         % Certain recipe fields need unusual things done, so we handle those first in the following if statement
         if strcmp(thisProp{2},'sampleSize') 
             %Because sample size is a structure that describes both X and Y
-            obj.recipeTextLabels.(thisProp{1}).([thisProp{2},'X']) = obj.makeRecipeLabel([152,18*(ii-1)+7,10,18],'X=');
-            obj.recipeTextLabels.(thisProp{1}).([thisProp{2},'Y']) = obj.makeRecipeLabel([215,18*(ii-1)+7,10,18],'Y=');
+            obj.recipeTextLabels.(thisProp{1}).([thisProp{2},'X']) = obj.makeRecipeLabel([152,iH+7,10,18],'X=');
+            obj.recipeTextLabels.(thisProp{1}).([thisProp{2},'Y']) = obj.makeRecipeLabel([215,iH+7,10,18],'Y=');
 
             obj.recipeEntryBoxes.(thisProp{1}).([thisProp{2},'X']) = ...
             uicontrol(commonRecipeTextEditSettings{:}, ...
-                'Position', [160, 18*(ii-1)+5, 30, 17], ...
+                'Position', [160, iH+5, 30, 17], ...
                 'TooltipString', obj.recipeToolTips{ii}, ...
                 'Tag', [obj.recipePropertyNames{ii},'||X']);
 
             obj.recipeEntryBoxes.(thisProp{1}).([thisProp{2},'Y']) = ...
             uicontrol(commonRecipeTextEditSettings{:}, ...
-                'Position', [225, 18*(ii-1)+5, 35, 17], ...
+                'Position', [225, iH+5, 35, 17], ...
                 'TooltipString', obj.recipeToolTips{ii}, ...
                 'Tag', [obj.recipePropertyNames{ii},'||Y']);
 
         elseif strcmp(thisProp{2},'scanmode')
             % The scan mode should be a drop-down as there are only a limited range of options.
             % The possibilities are stored in a property of the recipe class attached to the model.
+            textEditWidth=145;
             obj.recipeEntryBoxes.(thisProp{1}).(thisProp{2}) = ...
             uicontrol(commonRecipeTextEditSettings{:}, ...
                 'Style', 'popupmenu', ...
                 'String', obj.model.recipe.valid_scanMode_values, ...
-                'Position', [140, 18*(ii-1)+5, textEditWidth, 17], ...
+                'Position', [140, iH+6, textEditWidth, 17], ...
                 'TooltipString', obj.recipeToolTips{ii}, ...
                 'Tag', obj.recipePropertyNames{ii}); 
         else
@@ -103,9 +123,25 @@ function populateRecipePanel(obj)
             end
             obj.recipeEntryBoxes.(thisProp{1}).(thisProp{2}) = ...
             uicontrol(commonRecipeTextEditSettings{:}, ...
-                'Position', [140, 18*(ii-1)+5, textEditWidth, 17], ...
+                'Position', [140, iH+5, textEditWidth, 17], ...
                 'TooltipString', obj.recipeToolTips{ii}, ...
                 'Tag', obj.recipePropertyNames{ii}); %The tag is used by obj.updateRecipePropertyInRecipeClass to update the recipe
+        end
+
+        iH = iH + 18;
+        % Add an extra gap after certain items
+        if strcmp(thisProp{2},'objectiveName')
+            % For advanced items at the bottom
+            iH = iH+10;
+        end
+        if strcmp(thisProp{2},'cuttingSpeed')
+            iH = iH+0;
+        end
+        if strcmp(thisProp{2},'ID')
+            iH = iH+9;
+        end
+        if strcmp('sampleSize',thisProp{2})
+            iH = iH + 2;
         end
 
     end
