@@ -19,6 +19,10 @@ Install instructions for autoROI
 - The TissueCyte settings are now gone from the StitchIt ini files. You should remove the [experiment], [micsPerPixel], and "Objectives" sections. See the stitchitConf_DEFAULT.ini file for an example. 
 
 
+15th June 2020
+- User [branch autoROI]: Main view is re-organised so order of elements is more logical
+
+
 6th June 2020
 - User [branch autoROI]: Bugfixes
 - User [branch autoROI]: Improve support report contents
